--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hate-Speech Identificator</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     </head>
     <body>
         <header>
@@ -30,14 +30,17 @@
                 <input type="text" id="tweetInput" placeholder="Escribe tu tweet aqui" class="input_tweet">
                 
                 <label class="label-results" for="tweetInput">Resultado:</label>
-                <input type="text" id="mlResults">
+                <output type="text" id="mlResults">
+                    <h2> {{ results }}</h2>
+                </output>
                 
                 <button id="evaluateButton">Evaluar Hate Speech</button>
                 <div id="resultado"></div>
+                
             </div>
         </main>
     
-        <script src="app.js" defer></script>
+        <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
 
     </body>
 
